--- a/k8s/base/postgres/secret.example.yaml
+++ b/k8s/base/postgres/secret.example.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secret
+  name: pg-secret
 type: Opaque
 stringData:
   POSTGRES_USER: runsense
